kubernetes/sovereign-tags-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sovereign-tags
  labels:
    app: sovereign-tags
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sovereign-tags
  template:
    metadata:
      labels:
        app: sovereign-tags
    spec:
      containers:
      - name: sovereign-tags
        image: axiomic/sovereign-tags:latest
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 8090
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /health
            port: http
        livenessProbe:
          httpGet:
            path: /health
            port: http
