kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sovereign-service
spec:
  selector:
    app: sovereign-garden
  ports:
  - name: http
    port: 8024
    targetPort: 8024
    protocol: TCP
  type: ClusterIP
